syntax = "proto3";

option java_package = "io.morethan.tweaky.conductor.proto";
option java_outer_classname = "ConductorProto";
option java_multiple_files = false;

service Conductor {
  rpc ServerServices (ServerServicesRequest) returns (ServerServicesReply);
}

message ServerServicesRequest {}
message ServerServicesReply {
    repeated string name = 1;
}
