syntax = "proto3";

option java_package = "io.morethan.tweaky.node.proto";
option java_outer_classname = "NodeProto";
option java_multiple_files = false;

service Node {
  rpc Token (NodeTokenRequest) returns (NodeTokenReply);
}

message NodeTokenRequest {}
message NodeTokenReply {
    string token = 1;
}
